# robox_docs

./: .gitignore  LICENSE  README.md
design/firmware/sdd/chapters/: architectural_overview.md  detailed_design_description.md  introductie.md  sdd_firmware.md  sdd_firmware_raw.md  termen.md
design/firmware/sdd/diagrams/: DCD_firmware.asta
design/firmware/srs/chapters/: introductie.md  requirements.md  srs_firmware.md  termen.md  titelblad.md  usecase_beschrijving.md
design/hardware/bom/: bom_fastners.ods
design/hardware/mdd/chapters/: beschrijving.md  fotoboek.md  introductie.md  mdd_hardware.md  mdd_hardware_raw.md  overzicht.md  requirements.md  termen.md  titelblad.md
design/sdd_fw/chapters/: architectural_overview.md  detailed_design_description.md  introductie.md  sdd_firmware.md
design/sdd_sw/: sdd_software.md
design/sdd_sw/chapters/: design_description.md  introductie.md  sdd_software_raw.md  termen.md
design/software/sdd/chapters/: design_description.md  introductie.md  overzicht.md  sdd_software.md  termen.md  titelblad.md
design/software/sdd/diagram/: dcd_software.asta
design/software/srs/chapters/: fully_dressed.md  introductie.md  requirements.md  srs_software.md  srs_software_raw.md  termen.md  usecase_beschrijvingen.md
design/software/srs/diagrams/: UC_controlUI.asta
design/srs_fw/: srs_firmware.md
design/srs_fw/chapters/: introductie.md  requirements.md  srs_firmware_raw.md  termen.md
design/srs_fw/diagrams/: UC_firmware.asta
design/srs_sw/: srs_software.md
design/srs_sw/chapters/: product_functionaliteiten.md  titelblad.md  usecase_beschrijvingen.md
digital_media_productions/experiment_01/chapters/: experiment_01.md  inleiding.md  onderzoeksvraag.md  relevanten_aspecten.md  resultaten.md  titelblad.md
digital_media_productions/experiment_02/chapters/: betrouwbaar_testen.md  inleiding.md  onderzoeksvraag.md
digital_media_productions/experiment_02/code/v01/include/: Switch.h  config.h
digital_media_productions/experiment_02/code/v01/src/: Switch.cpp
digital_media_productions/experiment_02/code/v02/include/: config.h
digital_media_productions/experiment_02/code/v02/src/: main.cpp
digital_media_productions/experiment_02/results/data/: results_v02.ods
digital_media_productions/ontwerpproces/bijlage/: 08_repositories.txt
digital_media_productions/ontwerpproces/bijlage/01_prototypes/firmware/serial_test/driver/: CMakeLists.txt
digital_media_productions/ontwerpproces/bijlage/02_experiment_01/chapters/: betrouwbaar_testen.md  conclusie.md  exp_raw.md  meetopstelling.md  onderzoeksmethode.md
digital_media_productions/ontwerpproces/bijlage/02_experiment_01/code/: platformio.ini
digital_media_productions/ontwerpproces/bijlage/03_experiment_02/chapters/: conclusie.md  meetopstelling.md  onderzoeksmethode.md  resultaten.md  robot_configuraties.md  titelblad.md
digital_media_productions/ontwerpproces/chapters/: aanpak.md  bijlage.md  conclusie.md  inleiding.md  ontwerp_proces.md  ontwerpproces.md  ontwerpproces_raw.md  parts.md  reflectie.md  resultaten.md  samenvatting.md  titelblad.md
digital_media_productions/ontwerpproces/results/: results.ods
experiment/experiment_01/code/src/: main.cpp
experiment/experiment_02/: experiment02.md
experiment/experiment_02/chapters/: exp_raw.md
experiment/experiment_02/code/v01/src/: Motor.cpp
experiment/experiment_02/code/v02/include/: Motor.h
experiment/experiment_02/code/v02/src/: Motor.cpp
experiment/experiment_02/results/data/: results_v01.ods  results_v03.ods
hardware/: BOM_01.ods
hardware/bill_of_materials/: README.md  bom_hardware.ods
protocol/: protocol_description.md
protocol/chapters/: command_protocol.md  log_protocol.md  protocol_description_raw.md  response_protocol.md
prototypes/firmware/homing_test/: README.md
prototypes/firmware/homing_test/code/include/: AxialActuator.h  config.h
prototypes/firmware/homing_test/code/src/: HallSensor.cpp
prototypes/firmware/message_test/: README.md
prototypes/firmware/message_test/code/src/: Message.cpp
prototypes/firmware/robox_T40_msg_test/code/: platformio.ini
prototypes/firmware/robox_T40_serial_test/driver/: .gitignore
prototypes/firmware/state_machine_test/: README.md
prototypes/software/driver_test/: README.md
prototypes/software/driver_test/code/: CMakeLists.txt
prototypes/software/driver_test/code/include/config/: global_config.h
prototypes/software/driver_test/code/include/driver/: DataManager.h  RobotDriver.h  SerialDriver.h
prototypes/software/driver_test/code/include/interfaces/: LoggerInterface.h
prototypes/software/driver_test/code/lib/serial/: AsyncSerial.h
prototypes/software/driver_test/code/src/: SerialDriver.cpp
prototypes/software/driver_test/src/: DataManager.cpp  RobotDriver.cpp  main.cpp
prototypes/software/initial_setup/: README.md
prototypes/software/initial_setup/code/: CMakeLists.txt
prototypes/software/initial_setup/code/include/robox/: MainApp.h  MainFrame.h
prototypes/software/initial_setup/code/lib/utils/: Command.cpp
prototypes/software/logger_test/: CMakeLists.txt  README.md
prototypes/software/logger_test/code/frame/: MainFrame.cpp  MainFrame.h
prototypes/software/logger_test/code/include/utils/: LogMessage.h  LoggerInterface.h
prototypes/software/logger_test/code/lib/config/: global_config.h
prototypes/software/logger_test/code/lib/utils/: Logger.cpp
prototypes/software/logger_test/include/widgets/: LogMessagePanel.h  ScrolledLogWindow.h
prototypes/software/logger_test/src/: LogPanel.cpp  LogToConsole.cpp  LogToWidget.cpp
prototypes/software/robot_visual_test/: README.md
prototypes/software/robot_visual_test/src/: ManualCtrl.cpp  RobotDrawPanel.cpp
prototypes/software/robox_sw_robot_visual/code/: CMakeLists.txt
prototypes/software/robox_sw_robot_visual/code/include/config/: msg_protocol.h
prototypes/software/robox_sw_robot_visual/code/include/frame/: DrawPanel.h
prototypes/software/robox_sw_robot_visual/code/include/utils/: Point.h  String.h
prototypes/software/robox_sw_robot_visual/code/src/: ManualCtrlFrame.cpp
(+158 files in other folders)
